--- a/css/main.css
+++ b/css/main.css
@@ -261,3 +261,34 @@ textarea {
   }
 }
 
+/*
+=====================================================================
+Custom CSS from here on.
+=====================================================================
+*/
+
+h1 {
+  text-align: center;
+}
+
+body {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+table > tbody > tr > td  {
+  padding: 0;
+}
+
+table > tbody > tr > td > input {
+  border: 1px solid black;
+}
+
+.hidden {
+  display: none;
+}
+
