--- a/css/main.css
+++ b/css/main.css
@@ -284,8 +284,22 @@ table > tbody > tr > td  {
   padding: 0;
 }
 
-table > tbody > tr > td > input {
+table > tbody > tr {
   border: 1px solid black;
+}
+
+table > tbody > tr > td > input {
+  border: none;
+}
+
+table > tbody > tr > td {
+  border-right: 1px solid black;
+}
+
+table > tbody > tr > td:first-child {
+  padding-left: 25px;
+  padding-right: 25px;
+  background: lightgrey;
 }
 
 .hidden {
